[gd_scene load_steps=5 format=3 uid="uid://8d7i4m5thrhq"]

[ext_resource type="Theme" uid="uid://b6c0jw385qavt" path="res://Battle Scene/Menu Assets/Text.tres" id="1_hkavj"]
[ext_resource type="Texture2D" uid="uid://diqadgkhmt8h2" path="res://Battle Scene/Art/poker9patch.png" id="2_uh60y"]
[ext_resource type="Script" uid="uid://cxgmsal5jch8l" path="res://Battle Scene/Enemies/enemy_info_menu.gd" id="3_hkavj"]
[ext_resource type="PackedScene" uid="uid://b8bl304rkrbqx" path="res://Battle Scene/Enemies/enemy_label.tscn" id="4_l1rjb"]

[node name="EnemyInfoMenu" type="NinePatchRect"]
custom_minimum_size = Vector2(70, 70)
offset_right = 70.0
offset_bottom = 70.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_hkavj")
texture = ExtResource("2_uh60y")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
script = ExtResource("3_hkavj")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -35.0
offset_right = 36.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="EnemyInfoContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 6

[node name="EnemyLabel" parent="MarginContainer/EnemyInfoContainer" instance=ExtResource("4_l1rjb")]
layout_mode = 2
size_flags_horizontal = 0

[node name="EnemyLabel2" parent="MarginContainer/EnemyInfoContainer" instance=ExtResource("4_l1rjb")]
layout_mode = 2
size_flags_horizontal = 0

[node name="EnemyLabel3" parent="MarginContainer/EnemyInfoContainer" instance=ExtResource("4_l1rjb")]
layout_mode = 2
size_flags_horizontal = 0

[node name="EnemyLabel4" parent="MarginContainer/EnemyInfoContainer" instance=ExtResource("4_l1rjb")]
layout_mode = 2
size_flags_horizontal = 0
